further bug fixes on mobile task testing

--- a/admin/css/q_invoice-admin.css
+++ b/admin/css/q_invoice-admin.css
@@ -192,6 +192,10 @@ textarea.error {
     border-color: inherit;
 }
 
+.q-invoice-page .hide_settings_field{
+    display: none;
+}
+
 @media only screen and (max-width:1050px){
     .invoice-page{
         padding-top: 20px;
